--- a/first.html
+++ b/first.html
@@ -1,8 +1,15 @@
 <html>
 <head>
 <title>Mrec</title>
-<body>
+<body background="blue">
 <h1>Main Campus</h1>
-<p>malla reddy engineering college</p>
+<h2>malla reddy engineering college</h2>
+<marquee><h1> LOGIN PAGE </h1></marquee>
+ <form> <h3> Name:</h3>
+   <input placeholder="name"></input>
+   <h3> Roll No:</h3>
+   <input placeholder="roll.no"> </input></form>
+  <button> Login </button>
+   
 </body>
 </html>
